cvm/overlay: (2/2) Fix G1ClassUnloadingHWM test
Update TestG1ClassUnloadingHWM.java and WhiteBox.java to follow the JDK17 hotspot GC logging model.

Add maxMetaspaceAllocationSize() to WhiteBox.java and use it in TestG1ClassUnloadingHWM.java to align with JDK17 hotspot behavior.